updated with age variable

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     </header>
     <!-- HEADER ENDS HERE -->
     <main>
-      <form class="nameForm">
-        <input class="name" type="text" placeholder="Name please..." required>
-        <input type="submit" class="button" value="Submit!">
-      </form>
+      <aside>
+        <form class="nameForm">
+          <input class="name" type="text" placeholder="Name or Alias" required>
+          <input class="age" type="number" placeholder="Age Please..." required>
+          <input type="submit" class="button" value="Submit!">
+        </form>
+        <h2 class="aside-message">
+        
+        </h2>
+      </aside>
       <div class="playing-area">
           <div class="card">
             <div class="front">
