--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
               
           </div>
         </div>
-        <div class="main-image">
-          
+        <div class="main-image animated zoomInUp">
+          <h2>Whoever pulls the highest card wins the game!</h2>
         </div>
         <div class="card animated zoomInRight">
           <div class="front">
@@ -66,7 +66,6 @@
       <section class="button-area animated zoomInUp">
         <button class="deal-button button">Deal!</button>
         <button class="play-again-button button">Play Again!</button>
-
         <h2 class="message">
 
         </h2>
